Migrations, Relationships and Seeds

--- a/test/fixtures/simulations.yml
+++ b/test/fixtures/simulations.yml
@@ -2,8 +2,10 @@
 
 one:
   puntaje: 1
-  fecha_aplicacion: 2018-02-08 16:35:34
+  fecha_aplicacion: 2018-02-09 11:23:02
+  quiz: one
 
 two:
   puntaje: 1
-  fecha_aplicacion: 2018-02-08 16:35:34
+  fecha_aplicacion: 2018-02-09 11:23:02
+  quiz: two
