--- a/test/fixtures/quizzes.yml
+++ b/test/fixtures/quizzes.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  fecha_aplicacion: 2018-02-09 11:23:02
+  fecha_aplicacion: 2018-03-27 10:57:11
+  puntaje: 9.99
   quiz_type: one
 
 two:
-  fecha_aplicacion: 2018-02-09 11:23:02
+  fecha_aplicacion: 2018-03-27 10:57:11
+  puntaje: 9.99
   quiz_type: two
