--- a/test/fixtures/simulations.yml
+++ b/test/fixtures/simulations.yml
@@ -1,11 +1,17 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  puntaje: 1
-  fecha_aplicacion: 2018-02-09 11:23:02
+  obstaculos_derribados: 1
+  velocidad_excedida: 1
+  tiempo_simulacion: 1
+  cita: 2018-03-27 10:57:12
+  fecha_aplicacion: 2018-03-27 10:57:12
   quiz: one
 
 two:
-  puntaje: 1
-  fecha_aplicacion: 2018-02-09 11:23:02
+  obstaculos_derribados: 1
+  velocidad_excedida: 1
+  tiempo_simulacion: 1
+  cita: 2018-03-27 10:57:12
+  fecha_aplicacion: 2018-03-27 10:57:12
   quiz: two
